--- a/index.html
+++ b/index.html
@@ -48,86 +48,6 @@
         border-radius: 70% 30% 70% 30%;
         /* forma irregular */
         opacity: 0.9;
-        animation: fall 8s linear infinite, sway 3s ease-in-out infinite;
-    }
-
-    /* Cada pétalo en posiciones distintas */
-    .sakura span:nth-child(1) {
-        left: 5%;
-        animation-delay: 0s;
-    }
-
-    .sakura span:nth-child(2) {
-        left: 15%;
-        animation-delay: 2s;
-    }
-
-    .sakura span:nth-child(3) {
-        left: 25%;
-        animation-delay: 4s;
-    }
-
-    .sakura span:nth-child(4) {
-        left: 35%;
-        animation-delay: 1s;
-    }
-
-    .sakura span:nth-child(5) {
-        left: 50%;
-        animation-delay: 3s;
-    }
-
-    .sakura span:nth-child(6) {
-        left: 65%;
-        animation-delay: 5s;
-    }
-
-    .sakura span:nth-child(7) {
-        left: 75%;
-        animation-delay: 1.5s;
-    }
-
-    .sakura span:nth-child(8) {
-        left: 85%;
-        animation-delay: 2.5s;
-    }
-
-    .sakura span:nth-child(9) {
-        left: 90%;
-        animation-delay: 4.5s;
-    }
-
-    .sakura span:nth-child(10) {
-        left: 98%;
-        animation-delay: 6s;
-    }
-
-    /* Animación de caída */
-    @keyframes fall {
-        0% {
-            top: -10%;
-            transform: rotate(0deg);
-        }
-
-        100% {
-            top: 100%;
-            transform: rotate(360deg);
-        }
-    }
-
-    /* Animación de vaivén lateral */
-    @keyframes sway {
-        0% {
-            transform: translateX(0) rotate(0deg);
-        }
-
-        50% {
-            transform: translateX(30px) rotate(45deg);
-        }
-
-        100% {
-            transform: translateX(-30px) rotate(90deg);
-        }
     }
 
 
@@ -3208,7 +3128,7 @@ initAllCarousels();
         </tbody>
     </table>
 
-    <div class="sakura">
+    <!-- <div class="sakura">
         <span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span>
@@ -3219,7 +3139,79 @@ initAllCarousels();
         <span></span><span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span>
-    </div>
+    </div> -->
+
+    <div class="sakura"></div>
+
+<script>
+class Petal {
+    constructor(container, leftPercent, delay) {
+        this.container = container;
+        this.size = 12 + Math.random() * 10; // tamaño aleatorio
+        this.left = leftPercent; // porcentaje inicial
+        this.top = -10; // empieza fuera de la pantalla
+        this.speed = 0.2 + Math.random() * 0.5; // velocidad de caída
+        this.swing = 15 + Math.random() * 20; // amplitud del vaivén
+        this.angle = Math.random() * 360; // rotación inicial
+        this.rotationSpeed = 1 + Math.random() * 3;
+        this.delay = delay * 1000; // retraso inicial en ms
+
+        // Crear elemento
+        this.el = document.createElement('span');
+        this.el.style.position = 'absolute';
+        this.el.style.top = this.top + '%';
+        this.el.style.left = this.left + '%';
+        this.el.style.width = this.size + 'px';
+        this.el.style.height = (this.size * 0.8) + 'px';
+        this.el.style.background = '#ffb6c1';
+        this.el.style.borderRadius = '70% 30% 70% 30%';
+        this.el.style.opacity = 0.9;
+        container.appendChild(this.el);
+
+        this.startTime = null;
+        this.anim();
+    }
+
+    anim(timestamp) {
+        if (!this.startTime) {
+            this.startTime = timestamp + this.delay;
+        }
+
+        const elapsed = timestamp - this.startTime;
+
+        if (elapsed < 0) {
+            requestAnimationFrame(this.anim.bind(this));
+            return;
+        }
+
+        // Caída vertical
+        this.top += this.speed;
+        if (this.top > 110) this.top = -10; // reinicia
+
+        // Vaivén lateral
+        const sway = Math.sin((elapsed / 1000) * Math.PI) * this.swing;
+
+        // Rotación
+        this.angle += this.rotationSpeed;
+
+        // Aplicar estilos
+        this.el.style.top = this.top + '%';
+        this.el.style.left = (this.left + sway / window.innerWidth * 100) + '%';
+        this.el.style.transform = `rotate(${this.angle}deg)`;
+
+        requestAnimationFrame(this.anim.bind(this));
+    }
+}
+
+// Inicializar
+const container = document.querySelector('.sakura');
+for (let i = 0; i < 10; i++) {
+    const left = [5,15,25,35,50,65,75,85,90,98][i];
+    const delay = [0,2,4,1,3,5,1.5,2.5,4.5,6][i];
+    new Petal(container, left, delay);
+}
+</script>
+
 
 
 </body>
