--- a/index.html
+++ b/index.html
@@ -2087,12 +2087,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img class="carouselIMG" src="/photo1.webp" alt="foto1">
-                                        <img class="carouselIMG" src="/photo2.webp" alt="foto2">
-                                        <img class="carouselIMG" src="/photo3.webp" alt="foto3">
-                                        <img class="carouselIMG" loading="lazy" src="/photo4.webp" alt="foto4">
-                                        <img class="carouselIMG" loading="lazy" src="/photo5.webp" alt="foto5">
-                                        <img class="carouselIMG" loading="lazy" src="/photo6.webp" alt="foto6">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo1.webp" alt="foto1">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo2.webp" alt="foto2">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo3.webp" alt="foto3">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo4.webp" alt="foto4">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo5.webp" alt="foto5">
+                                        <img rel="preload" fetchpriority="high" loading="eager" class="carouselIMG" src="/photo6.webp" alt="foto6">
                                     </div>
                                 </div>
                             </td>
@@ -2540,12 +2540,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img  class="carouselIMG" src="/photo7.webp" alt="foto1">
-                                        <img  class="carouselIMG" src="/photo8.webp" alt="foto2">
-                                        <img  class="carouselIMG" src="/photo9.webp" alt="foto3">
-                                        <img  class="carouselIMG" src="/photo10.webp" alt="foto4">
-                                        <img  class="carouselIMG" loading="lazy" src="/photo11.webp" alt="foto5">
-                                        <img  class="carouselIMG" loading="lazy" src="/photo12.webp" alt="foto6">
+                                        <img rel="preload"  class="carouselIMG" src="/photo7.webp" alt="foto1">
+                                        <img rel="preload"  class="carouselIMG" src="/photo8.webp" alt="foto2">
+                                        <img rel="preload"  class="carouselIMG" src="/photo9.webp" alt="foto3">
+                                        <img rel="preload"  class="carouselIMG" src="/photo10.webp" alt="foto4">
+                                        <img rel="preload"  class="carouselIMG" src="/photo11.webp" alt="foto5">
+                                        <img rel="preload"  class="carouselIMG" src="/photo12.webp" alt="foto6">
                                     </div>
                                 </div>
                             </td>
